# project2_kizelbashev_M25-555

./: .gitignore  README.md  project2_kizelbashev_alexander_m25-555  pyproject.toml
src/primitive_db/: core.py  engine.py  main.py  utils.py
